// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConfirmationModal /> should render the same buy snapshot 1`] = `
<ConfirmationModal
  amount={10}
  clickRate={1.40123}
  currency={
    Object {
      "source": "EUR",
    }
  }
  showModal={true}
  toggleModal={[Function]}
  type="BUY"
>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransition={
      Object {
        "mountOnEnter": true,
        "timeout": 150,
      }
    }
    centered={false}
    fade={true}
    isOpen={true}
    keyboard={true}
    modalTransition={
      Object {
        "timeout": 300,
      }
    }
    onClosed={[Function]}
    onOpened={[Function]}
    role="dialog"
    toggle={[Function]}
    zIndex={1050}
  >
    <Portal
      node={
        <div
          tabindex="-1"
          style="position: relative; z-index: 1050;"
        >
          <div
            class=""
          >
            <div
              class="modal fade"
              style="display: block;"
              role="dialog"
              tabindex="-1"
            >
              <div
                class="modal-dialog"
                role="document"
              >
                <div
                  class="modal-content"
                >
                  <div
                    class="modal-header"
                  >
                    <h5
                      class="modal-title"
                    >
                      Receipt
                    </h5>
                    <button
                      type="button"
                      class="close"
                      aria-label="Close"
                    >
                      <span
                        aria-hidden="true"
                      >
                        ×
                      </span>
                    </button>
                  </div>
                  <div
                    class="modal-body"
                  >
                    <span>
                      You 
                      bought
                    </span>
                    <span>
                      14.01230
                    </span>
                    <span>
                      EUR
                    </span>
                  </div>
                  <div
                    class="modal-footer"
                  >
                    <button
                      type="button"
                      class="btn btn-primary"
                    >
                      OK
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="modal-backdrop fade"
            />
          </div>
        </div>
      }
    >
      <Portal
        containerInfo={
          <div
            tabindex="-1"
            style="position: relative; z-index: 1050;"
          >
            <div
              class=""
            >
              <div
                class="modal fade"
                style="display: block;"
                role="dialog"
                tabindex="-1"
              >
                <div
                  class="modal-dialog"
                  role="document"
                >
                  <div
                    class="modal-content"
                  >
                    <div
                      class="modal-header"
                    >
                      <h5
                        class="modal-title"
                      >
                        Receipt
                      </h5>
                      <button
                        type="button"
                        class="close"
                        aria-label="Close"
                      >
                        <span
                          aria-hidden="true"
                        >
                          ×
                        </span>
                      </button>
                    </div>
                    <div
                      class="modal-body"
                    >
                      <span>
                        You 
                        bought
                      </span>
                      <span>
                        14.01230
                      </span>
                      <span>
                        EUR
                      </span>
                    </div>
                    <div
                      class="modal-footer"
                    >
                      <button
                        type="button"
                        class="btn btn-primary"
                      >
                        OK
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="modal-backdrop fade"
              />
            </div>
          </div>
        }
      >
        <div
          className=""
        >
          <Fade
            appear={true}
            baseClass="fade"
            baseClassActive="show"
            className="modal"
            enter={true}
            exit={true}
            in={true}
            mountOnEnter={false}
            onClick={[Function]}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            role="dialog"
            style={
              Object {
                "display": "block",
              }
            }
            tabIndex="-1"
            tag="div"
            timeout={300}
            unmountOnExit={false}
          >
            <Transition
              appear={true}
              enter={true}
              exit={true}
              in={true}
              mountOnEnter={false}
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              timeout={300}
              unmountOnExit={false}
            >
              <div
                className="modal fade"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                role="dialog"
                style={
                  Object {
                    "display": "block",
                  }
                }
                tabIndex="-1"
              >
                <div
                  className="modal-dialog"
                  role="document"
                >
                  <div
                    className="modal-content"
                  >
                    <ModalHeader
                      charCode={215}
                      closeAriaLabel="Close"
                      tag="h5"
                      toggle={[Function]}
                      wrapTag="div"
                    >
                      <div
                        className="modal-header"
                      >
                        <h5
                          className="modal-title"
                        >
                          Receipt
                        </h5>
                        <button
                          aria-label="Close"
                          className="close"
                          onClick={[Function]}
                          type="button"
                        >
                          <span
                            aria-hidden="true"
                          >
                            ×
                          </span>
                        </button>
                      </div>
                    </ModalHeader>
                    <ModalBody
                      tag="div"
                    >
                      <div
                        className="modal-body"
                      >
                        <span>
                          You 
                          bought
                           
                        </span>
                        <NumberFormat
                          allowEmptyFormatting={false}
                          allowNegative={true}
                          decimalSeparator="."
                          displayType="text"
                          fixedDecimalScale={false}
                          getInputRef={[Function]}
                          isAllowed={[Function]}
                          isNumericString={false}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onMouseUp={[Function]}
                          onValueChange={[Function]}
                          prefix=""
                          suffix=""
                          thousandSeparator={true}
                          type="text"
                          value="14.01230"
                        >
                          <span>
                            14.01230
                          </span>
                        </NumberFormat>
                        <span>
                           
                          EUR
                        </span>
                      </div>
                    </ModalBody>
                    <ModalFooter
                      tag="div"
                    >
                      <div
                        className="modal-footer"
                      >
                        <Button
                          color="primary"
                          onClick={[Function]}
                          tag="button"
                        >
                          <button
                            className="btn btn-primary"
                            onClick={[Function]}
                            type="button"
                          >
                            OK
                          </button>
                        </Button>
                         
                      </div>
                    </ModalFooter>
                  </div>
                </div>
              </div>
            </Transition>
          </Fade>
          <Fade
            appear={true}
            baseClass="fade"
            baseClassActive="show"
            className="modal-backdrop"
            enter={true}
            exit={true}
            in={true}
            mountOnEnter={true}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            tag="div"
            timeout={150}
            unmountOnExit={false}
          >
            <Transition
              appear={true}
              enter={true}
              exit={true}
              in={true}
              mountOnEnter={true}
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              timeout={150}
              unmountOnExit={false}
            >
              <div
                className="modal-backdrop fade"
              />
            </Transition>
          </Fade>
        </div>
      </Portal>
    </Portal>
  </Modal>
</ConfirmationModal>
`;

exports[`<ConfirmationModal /> should render the same sell snapshot 1`] = `
<ConfirmationModal
  amount={10}
  clickRate={1.40123}
  currency={
    Object {
      "source": "EUR",
    }
  }
  showModal={true}
  toggleModal={[Function]}
  type="SELL"
>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransition={
      Object {
        "mountOnEnter": true,
        "timeout": 150,
      }
    }
    centered={false}
    fade={true}
    isOpen={true}
    keyboard={true}
    modalTransition={
      Object {
        "timeout": 300,
      }
    }
    onClosed={[Function]}
    onOpened={[Function]}
    role="dialog"
    toggle={[Function]}
    zIndex={1050}
  >
    <Portal
      node={
        <div
          tabindex="-1"
          style="position: relative; z-index: 1050;"
        >
          <div
            class=""
          >
            <div
              class="modal fade"
              style="display: block;"
              role="dialog"
              tabindex="-1"
            >
              <div
                class="modal-dialog"
                role="document"
              >
                <div
                  class="modal-content"
                >
                  <div
                    class="modal-header"
                  >
                    <h5
                      class="modal-title"
                    >
                      Receipt
                    </h5>
                    <button
                      type="button"
                      class="close"
                      aria-label="Close"
                    >
                      <span
                        aria-hidden="true"
                      >
                        ×
                      </span>
                    </button>
                  </div>
                  <div
                    class="modal-body"
                  >
                    <span>
                      You 
                      sold
                    </span>
                    <span>
                      14.01230
                    </span>
                    <span>
                      EUR
                    </span>
                  </div>
                  <div
                    class="modal-footer"
                  >
                    <button
                      type="button"
                      class="btn btn-primary"
                    >
                      OK
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="modal-backdrop fade"
            />
          </div>
        </div>
      }
    >
      <Portal
        containerInfo={
          <div
            tabindex="-1"
            style="position: relative; z-index: 1050;"
          >
            <div
              class=""
            >
              <div
                class="modal fade"
                style="display: block;"
                role="dialog"
                tabindex="-1"
              >
                <div
                  class="modal-dialog"
                  role="document"
                >
                  <div
                    class="modal-content"
                  >
                    <div
                      class="modal-header"
                    >
                      <h5
                        class="modal-title"
                      >
                        Receipt
                      </h5>
                      <button
                        type="button"
                        class="close"
                        aria-label="Close"
                      >
                        <span
                          aria-hidden="true"
                        >
                          ×
                        </span>
                      </button>
                    </div>
                    <div
                      class="modal-body"
                    >
                      <span>
                        You 
                        sold
                      </span>
                      <span>
                        14.01230
                      </span>
                      <span>
                        EUR
                      </span>
                    </div>
                    <div
                      class="modal-footer"
                    >
                      <button
                        type="button"
                        class="btn btn-primary"
                      >
                        OK
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="modal-backdrop fade"
              />
            </div>
          </div>
        }
      >
        <div
          className=""
        >
          <Fade
            appear={true}
            baseClass="fade"
            baseClassActive="show"
            className="modal"
            enter={true}
            exit={true}
            in={true}
            mountOnEnter={false}
            onClick={[Function]}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            role="dialog"
            style={
              Object {
                "display": "block",
              }
            }
            tabIndex="-1"
            tag="div"
            timeout={300}
            unmountOnExit={false}
          >
            <Transition
              appear={true}
              enter={true}
              exit={true}
              in={true}
              mountOnEnter={false}
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              timeout={300}
              unmountOnExit={false}
            >
              <div
                className="modal fade"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                role="dialog"
                style={
                  Object {
                    "display": "block",
                  }
                }
                tabIndex="-1"
              >
                <div
                  className="modal-dialog"
                  role="document"
                >
                  <div
                    className="modal-content"
                  >
                    <ModalHeader
                      charCode={215}
                      closeAriaLabel="Close"
                      tag="h5"
                      toggle={[Function]}
                      wrapTag="div"
                    >
                      <div
                        className="modal-header"
                      >
                        <h5
                          className="modal-title"
                        >
                          Receipt
                        </h5>
                        <button
                          aria-label="Close"
                          className="close"
                          onClick={[Function]}
                          type="button"
                        >
                          <span
                            aria-hidden="true"
                          >
                            ×
                          </span>
                        </button>
                      </div>
                    </ModalHeader>
                    <ModalBody
                      tag="div"
                    >
                      <div
                        className="modal-body"
                      >
                        <span>
                          You 
                          sold
                           
                        </span>
                        <NumberFormat
                          allowEmptyFormatting={false}
                          allowNegative={true}
                          decimalSeparator="."
                          displayType="text"
                          fixedDecimalScale={false}
                          getInputRef={[Function]}
                          isAllowed={[Function]}
                          isNumericString={false}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onMouseUp={[Function]}
                          onValueChange={[Function]}
                          prefix=""
                          suffix=""
                          thousandSeparator={true}
                          type="text"
                          value="14.01230"
                        >
                          <span>
                            14.01230
                          </span>
                        </NumberFormat>
                        <span>
                           
                          EUR
                        </span>
                      </div>
                    </ModalBody>
                    <ModalFooter
                      tag="div"
                    >
                      <div
                        className="modal-footer"
                      >
                        <Button
                          color="primary"
                          onClick={[Function]}
                          tag="button"
                        >
                          <button
                            className="btn btn-primary"
                            onClick={[Function]}
                            type="button"
                          >
                            OK
                          </button>
                        </Button>
                         
                      </div>
                    </ModalFooter>
                  </div>
                </div>
              </div>
            </Transition>
          </Fade>
          <Fade
            appear={true}
            baseClass="fade"
            baseClassActive="show"
            className="modal-backdrop"
            enter={true}
            exit={true}
            in={true}
            mountOnEnter={true}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            tag="div"
            timeout={150}
            unmountOnExit={false}
          >
            <Transition
              appear={true}
              enter={true}
              exit={true}
              in={true}
              mountOnEnter={true}
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              timeout={150}
              unmountOnExit={false}
            >
              <div
                className="modal-backdrop fade"
              />
            </Transition>
          </Fade>
        </div>
      </Portal>
    </Portal>
  </Modal>
</ConfirmationModal>
`;
